[WGSL] texture1d.read(coord, level): level must be zero https://bugs.webkit.org/show_bug.cgi?id=263481 rdar://117283953

Reviewed by Mike Wyrzykowski.

The MSL spec requires that the level argument be a compile time constant, and that
the value must be zero. Since that is the default value, we just skip serializing
the argument instead.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::emitTextureLoad):
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:

Canonical link: https://commits.webkit.org/269931@main